--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ ul {
 ul li {
   cursor: pointer;
   position: relative;
-  padding: 12px 8px 12px 40px;
+  padding: 12px 8px 12px 70px;
   list-style-type: none;
   background: #eee;
   font-size: 18px;
@@ -75,6 +75,20 @@ ul li.checked::before {
   color: white;
 }
 
+.opens {
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding: 12px 20px 12px 10px;
+  outline: 1px solid rgb(239, 225, 225);
+  margin-right: 5px;
+}
+
+.opens:hover {
+  background-color: #f44336;
+  color: white;
+}
+
 /* Style the header */
 .header {
   background-color: #f44336;
@@ -95,7 +109,7 @@ input {
   margin: 0;
   border: none;
   border-radius: 0;
-  width: 75%;
+  width: 50%;
   padding: 10px;
   float: left;
   font-size: 16px;
@@ -103,11 +117,11 @@ input {
 
 /* Style the "Add" button */
 .addBtn {
-  padding: 10px;
-  width: 25%;
+  padding: 8px;
+  margin-right: 7px;
+  width: 20%;
   background: #d9d9d9;
   color: #555;
-  float: left;
   text-align: center;
   font-size: 16px;
   cursor: pointer;
